# munchen-hackaton-2025

./: README.md
adk-demo/: README.md  setup.sh
adk-demo/academic-research-with-download/: .env  README.md  pyproject.toml
adk-demo/academic-research-with-download/academic_research/: agent.py  prompt.py  tools.py
adk-demo/academic-research-with-download/tests/: test_tools.py
adk-demo/french-interpreter/: pyproject.toml
adk-demo/french-interpreter/french-interpreter/: agent.py  deploy.py
adk-demo/invitations/: pyproject.toml
adk-demo/invitations/invitations/: .env  agent.py
